<resources>
    <string name="app_name">MedManager</string>
    <string name="sample_medication_name">Paracetamol</string>
    <string name="sample_med_description">Enter the description of your medication  to help you remember.</string>
    <string name="sample_month">March</string>
    <string name="med_title">Name of Medication</string>
    <string name="sample_start_date">April 5th</string>
    <string name="sample_end_date">June 20th</string>
    <string name="remind_me">Remind Me</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="Exit_text">Exit Application</string>
    <string name="Delete_text">Delete this Medication</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="default_id">0</string>
    <string name="description_header">Description</string>
    <string name="start_date_header">Start Date</string>
    <string name="end_date_header">End Date</string>
    <string name="dosage">Dosage</string>
    <string name="sample_dosage_text">2x Daily</string>
    <string name="updatedsuccessfully">Updated Successfully</string>
    <string name="updating">Updating</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="saving">Saving</string>
    <string name="default_start_time">8 Am daily</string>
    <string name="signin_cancelled">Cancelled</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="default_name">John smith</string>
    <string name="time_zero">:00</string>
    <string name="default_about_user">My name is John and I am a good boy that loves to cook and play with my computer</string>
    <string name="name_title">Username</string>
    <string name="sign_out">Sign out</string>
    <string name="about_user_title">About me</string>
    <string name="prof_details_hint">Enter some details about ourself</string>
    <string name="saveState">Saving...</string>

    <string-array name="remind_me">
        <item>No</item>
        <item>Yes</item>
    </string-array>

    <string-array name="daily_dosage">
        <item>1x daily</item>
        <item>2x daily</item>
        <item>3x daily</item>
    </string-array>
</resources>
