<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/Theme.Design.NoActionBar"
    tools:context=".views.SplashScreenActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/med_title"
        style="@style/CustomHeaderTextStyle" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sample_medication_name"
        android:textSize="20sp"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Description"
        style="@style/CustomHeaderTextStyle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sample_med_description"
        android:textSize="20sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Daily Intervals"
            android:layout_margin="10dp"
            style="@style/CustomHeaderTextStyle" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/create_med_icon_marginLeft"
            android:entries="@array/hour_intervals"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Start Date"
            android:layout_margin="10dp"
            style="@style/CustomHeaderTextStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/sample_start_date"/>

        <Button
            android:layout_width="@dimen/start_date_icon_width"
            android:layout_height="@dimen/start_date_icon_height"
            android:layout_marginLeft="@dimen/create_med_icon_marginLeft"
            android:layout_gravity="center"
            android:background="@drawable/ic_date_range"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="End Date"
            android:layout_margin="10dp"
            style="@style/CustomHeaderTextStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/sample_end_date"/>

        <Button
            android:layout_width="@dimen/start_date_icon_width"
            android:layout_height="@dimen/start_date_icon_height"
            android:layout_marginLeft="@dimen/create_med_icon_marginLeft"
            android:layout_gravity="center"
            android:background="@drawable/ic_date_range"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remind_me"
            android:layout_margin="10dp"
            style="@style/CustomHeaderTextStyle" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/create_med_icon_marginLeft"
            android:entries="@array/remind_me"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save"
            android:layout_margin="10dp"
            android:text="@string/save"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_edit"
            android:layout_margin="10dp"
            android:text="@string/edit"/>


    </LinearLayout>

</LinearLayout>
