<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        app:cardCornerRadius="2dp"
        app:cardElevation="5dp"
        android:gravity="center"
        >

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/sample_medication_name"
               android:padding="10dp"
               android:textAllCaps="true"
               android:textStyle="bold"
               android:id="@+id/med_name"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/sample_month"
               android:padding="10dp"
               android:layout_alignParentEnd="true"
               android:textAlignment="textEnd"
               android:layout_toEndOf="@id/med_name"
               android:id="@+id/med_month"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/sample_med_description"
               android:padding="10dp"
               android:maxWidth="@dimen/max_desc_width"
               android:maxHeight="@dimen/max_desc_height"
               android:layout_below="@id/med_name"
               android:id="@+id/med_descrition"/>

           <Button
               android:layout_width="60dp"
               android:layout_height="60dp"
               android:background="@drawable/ic_alarm_on"
               android:layout_below="@id/med_month"
               android:layout_alignParentEnd="true"
               android:id="@+id/btn_reminder"/>

       </RelativeLayout>

    </android.support.v7.widget.CardView>




</LinearLayout>
